# fast-cgan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  forecast2histogram_JB.py  forecast2histogram_MK.py  jobs.Dockerfile  mypy.ini  pyproject.toml
cloud/: training-gpu-server.tf
fastcgan/: config.py  main.py  security.py  setup.py
fastcgan/db/: database.py  enums.py  mixins.py  schema.py
fastcgan/exceptions/: cache_exceptions.py
fastcgan/jobs/: cgan_ifs.py  counts.py  data_sync.py  download.py  files_cleaner.py  icpac_ftp.py  manager.py  open_ifs.py  proxy_sync.py  sftp.py  stubs.py  utils.py
fastcgan/models/: rate_limit.py  routes.py  settings.py  shared.py
fastcgan/routes/: __init__.py  forecast.py  healthz.py  open_ifs.py  settings.py
fastcgan/tools/: config.py  constants.py  data_sync.py  download.py  enums.py  jobs.py  logger.py  models.py  security.py  setup.py  utils.py
fastcgan/utils/: cache.py  rate_limit.py
fastcgan/views/: forecast.py  open_ifs.py  tools.py
migrations/: env.py
migrations/versions/: 37e16bf0fa97_.py
sql/: web-schema.sql
